...
            android:layout_weight="1"
            android:text="Фоновая музыка"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/musicSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
...
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/playerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите имя игрока"
        android:text="Игрок"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
...
